--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,10 @@
 name: 'Prepare for Build'
 description: 'AWS login, get CodeArtifact token, setup Java and Maven'
-#inputs:
-#  AWS_ACCOUNT:
-#    description: 'AWS account number where the CodeArtifact domain is located'
-#    required: true
-#    default: '401861661880'
+inputs:
+  AWS_ACCOUNT:
+    description: 'AWS account number where the CodeArtifact domain is located'
+    required: true
+    default: '401861661880'
 #outputs:
 #  random-number:
 #    description: "Random number"
@@ -12,16 +12,13 @@ description: 'AWS login, get CodeArtifact token, setup Java and Maven'
 runs:
   using: "composite"
   steps:
-    - name: test
-      run: echo "Hello world"
-      shell: bash
-#    - name: Configure AWS credentials
-#      uses: aws-actions/configure-aws-credentials@v4
-#      with:
-#        audience: sts.amazonaws.com
-#        aws-region: us-east-1
-#        role-to-assume: ${{ env.AWS_ROLE_BUILDER }}
-#
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        audience: sts.amazonaws.com
+        aws-region: us-east-1
+        role-to-assume: arn:aws:iam::${{inputs.AWS_ACCOUNT}}:role/ci/builder
+
 #    - name: Setup Java
 #      uses: actions/setup-java@v4
 #      with:
@@ -30,6 +27,7 @@ runs:
 #        cache: maven
 #
 #    - name: Generate CodeArtifact token
+#      shell: bash
 #      run: |
 #        TOKEN=`aws codeartifact get-authorization-token --domain agilecustoms --domain-owner $INPUT_AWS_ACCOUNT --query authorizationToken --output text`
 #        echo "::add-mask::$TOKEN"
