--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,10 @@
 name: 'Prepare for Build'
 description: 'Setup java + maven, login to AWS and generate CodeArtifact token'
+inputs:
+  AWS_ACCOUNT:
+    description: 'AWS account number where the CodeArtifact domain is located'
+    required: true
+    default: '401861661880'
 runs:
   using: "composite"
   steps:
@@ -17,11 +22,11 @@ runs:
       with:
         audience: sts.amazonaws.com
         aws-region: us-east-1
-        role-to-assume: arn:aws:iam::${{ vars.AWS_ACCOUNT_SHARED }}:role/ci/builder
+        role-to-assume: arn:aws:iam::${{ inputs.AWS_ACCOUNT }}:role/ci/builder
 
     - name: Generate CodeArtifact token
       shell: bash
       run: |
-        TOKEN=`aws codeartifact get-authorization-token --domain agilecustoms --domain-owner ${{ vars.AWS_ACCOUNT_SHARED }} --query authorizationToken --output text`
+        TOKEN=`aws codeartifact get-authorization-token --domain agilecustoms --domain-owner ${{ inputs.AWS_ACCOUNT }} --query authorizationToken --output text`
         echo "::add-mask::$TOKEN"
         echo "CODEARTIFACT_AUTH_TOKEN=$TOKEN" >> $GITHUB_ENV
