debug how action works

--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,7 @@ runs:
       id: codeartifact
       shell: bash
       run: |
+        aws sts get-caller-identity
         domain=agilecustoms
         TOKEN=`aws codeartifact get-authorization-token --domain $domain --domain-owner ${{ inputs.AWS_ACCOUNT }} --query authorizationToken --output text`
         echo "::add-mask::$TOKEN"
@@ -37,7 +38,6 @@ runs:
       #  so it is additionally put in env variable 'ARTIFACT_STORE_URL', see pom.xml files in 'java-parent' repos
 
     - name: Setup Maven settings.xml
-      id: maven_settings
       uses: s4u/maven-settings-action@v3.0.0
       with:
         servers: '[{"id": "agilecustoms-maven", "username": "aws", "password": "${{ steps.codeartifact.outputs.TOKEN }}"}]'
