--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Prepare Java
-        uses: agilecustoms/gha-prepare-java@main
+        uses: agilecustoms/gha-prepare-java@debug
         with:
           AWS_ACCOUNT: ${{ vars.AWS_ACCOUNT_SHARED }}
