--- a/.github/workflows/test-feature.yml
+++ b/.github/workflows/test-feature.yml
@@ -2,6 +2,8 @@ name: Test
 
 on:
   push:
+    branches:
+      - feature
 
 jobs:
   Test:
@@ -14,6 +16,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Prepare Java
-        uses: agilecustoms/gha-prepare-java@debug
+        uses: agilecustoms/gha-prepare-java@feature
         with:
           AWS_ACCOUNT: ${{ vars.AWS_ACCOUNT_SHARED }}
