--- a/action.yml
+++ b/action.yml
@@ -42,3 +42,7 @@ runs:
       with:
         servers: '[{"id": "agilecustoms-maven", "username": "aws", "password": "${{ steps.codeartifact.outputs.TOKEN }}"}]'
         repositories: '[{"id":"agilecustoms-maven","url":"${{ steps.codeartifact.outputs.URL }}"}]'
+
+    - name: Debug
+      shell: bash
+      run: cat /home/runner/.m2/settings.xml
