--- a/action.yml
+++ b/action.yml
@@ -43,6 +43,6 @@ runs:
         servers: '[{"id": "agilecustoms-maven", "username": "aws", "password": "${{ steps.codeartifact.outputs.TOKEN }}"}]'
         repositories: '[{"id":"agilecustoms-maven","url":"${{ steps.codeartifact.outputs.URL }}"}]'
 
-    - name: Debug
-      shell: bash
-      run: cat /home/runner/.m2/settings.xml
+#    - name: Debug
+#      shell: bash
+#      run: cat /home/runner/.m2/settings.xml # see sample.settings.xml
