--- a/action.yml
+++ b/action.yml
@@ -39,6 +39,7 @@ runs:
         echo "ARTIFACT_STORE_HOST=$HOST" >> $GITHUB_ENV
       # TOKEN used only in settings.xml file, while HOST is used both in settings.xml AND parent pom.xml 'distributionManagement'
       #  so it is additionally put in env variable 'ARTIFACT_STORE_URL', see pom.xml files in 'java-parent' repos
+      # Dec-31,2024 I triple checked: such env variable is JOB-scoped, so it indeed become available in job that calls this action
 
     # First I tried "s4u/maven-settings-action@v3.0.0" - it was more concise, but I doesn't support pluginRepositories
     # There is no setting how to call resulting profile (it is always "github"), but there is a setting to activate it (active_profiles)
