--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,7 @@
 name: 'Prepare Java'
 description: 'Setup java + maven, login to AWS and generate CodeArtifact token'
 inputs:
-  AWS_ACCOUNT:
+  aws-account:
     description: 'AWS account number where the CodeArtifact domain is located'
     required: true
   role-name:
@@ -28,7 +28,7 @@ runs:
       uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-region: us-east-1
-        role-to-assume: arn:aws:iam::${{ inputs.AWS_ACCOUNT }}:role/ci/${{ inputs.role-name }}
+        role-to-assume: arn:aws:iam::${{ inputs.aws-account }}:role/ci/${{ inputs.role-name }}
 
     - name: Generate CodeArtifact token and url
       id: codeartifact
@@ -38,7 +38,7 @@ runs:
         TOKEN=`aws codeartifact get-authorization-token --domain $domain --query authorizationToken --output text`
         echo "::add-mask::$TOKEN"
         echo "TOKEN=$TOKEN" >> $GITHUB_OUTPUT
-        HOST="$domain-${{ inputs.AWS_ACCOUNT }}.d.codeartifact.us-east-1.amazonaws.com"
+        HOST="$domain-${{ inputs.aws-account }}.d.codeartifact.us-east-1.amazonaws.com"
         echo "HOST=$HOST" >> $GITHUB_OUTPUT
         echo "ARTIFACT_STORE_HOST=$HOST" >> $GITHUB_ENV
       # TOKEN used only in settings.xml file, while HOST is used both in settings.xml AND parent pom.xml 'distributionManagement'
